@@ -1,4 +1,6 @@
 0.05
+ [Common]
+ - Update Module::Install to 1.16 version.
 
 0.04 2015-01-24T18:42:18+01:00
  [Map::Tube::Text::Table]
